final style updates; collapser fixes

--- a/style/base.css
+++ b/style/base.css
@@ -64,6 +64,9 @@
   -moz-appearance: none;
   background-color: transparent;
   white-space: pre-wrap;
+  font-family: var(--jp-content-font-family);
+  font-size: var(--jp-content-font-size1);
+  line-height: var(--jp-content-line-height);
 }
 
 .jc-Body:focus {
@@ -80,44 +83,63 @@
 }
 
 .jc-Replies-breaker {
-  display: flex;
-  border: var(--jc-comment-border);
-  align-items: baseline;
-  /* align-items: flex-start; */
-  justify-content: space-between;
-  /* padding: 5px 10px -10px 10px; */
-  padding: 0px 10px 0px 10px;
-  margin-top: -4px;
-  position: relative;
+  height: 24px;
   z-index: 2;
-  border-top: none;
-  height: 30px;
+  border-top: var(--jc-comment-border);
+  position: relative;
 }
 
 .jc-CommentWidget:focus-within .jc-Replies-breaker {
   border-color: var(--jp-brand-color1);
 }
 
+.jc-Replies-breaker-right {
+  overflow: hidden;
+}
+
+.jc-Replies-breaker-left {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: var(--jp-ui-font-color2);
+  font-family: var(--jp-content-font-family);
+  font-size: var(--jp-content-font-size1);
+  line-height: var(--jp-content-line-height);
+}
+
+.jc-RepliesSpacer {
+  float: right;
+  width: 10px;
+  height: 1px;
+}
+
 .jc-Replies-breaker-right > hr {
   border: 0.5px solid var(--jp-ui-font-color3);
-  position: relative;
-  bottom: 2em;
-  width: 8em;
+  width: 100%;
   z-index: 1;
 }
 .jc-Replies-breaker-number {
+  /* 32px circle */
   border-radius: 50%;
   width: 32px;
   height: 32px;
+
+  /* Color */
   border: 1px solid var(--jp-ui-font-color3);
   background-color: var(--jc-panel-background-color);
-  /* text-align: center; */
-  position: relative;
+
+  /* Center text */
   display: flex;
   justify-content: center;
   align-items: center;
-  left: 70%;
-  z-index: 10;
+
+  z-index: 3;
+
+  /* Pixel-pushing circle */
+  float: right;
+  position: absolute;
+  right: 20px;
+  bottom: -5px;
 }
 
 .jc-CommentInput {
@@ -131,7 +153,6 @@
   height: fit-content;
   width: fit-content;
   float: right;
-  /*margin-top: -20px;*/
   text-align: center;
   margin: auto auto;
   z-index: 5;
@@ -149,26 +170,13 @@
   left: 0;
   height: var(--jc-comment-profile-pic-size);
   width: var(--jc-comment-profile-pic-size);
-}
-.jc-CommentProfilePicContainer {
-  float: left;
-  width: var(--jc-comment-profile-pic-size);
-}
-
-.jc-ProfilePic {
-  /* display: block; */
-  border-radius: 50%;
-  top: 0;
-  left: 0;
-  height: var(--jc-profile-pic-size);
-  width: var(--jc-profile-pic-size);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.jc-ReplyProfilePicContainer {
+.jc-CommentProfilePicContainer {
   float: left;
-  width: var(--jc-reply-profile-pic-size);
+  width: var(--jc-comment-profile-pic-size);
 }
 
 .jc-ReplyPic {
@@ -265,7 +273,6 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  /* padding: 10px 10px 10px 10px; */
   padding: 10px;
   z-index: 2;
 }
